# py-nvfan

./: README.md  config.yaml  publish.sh  pyproject.toml
src/py_nvfan/: __init__.py  config.py  nvidialib.py
src/python_nvfan/: __init__.py  config.py  nvidia.py  nvidialib.py
