[project]
name = "python-nvfan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antrax", email = "fredcox@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "confz>=2.1.0",
    "pynvml>=12.0.0",
    "rich>=14.0.0",
]

[project.scripts]
python-nvfan = "python_nvfan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
